--- a/VeriView/src/main/webapp/WEB-INF/web.xml
+++ b/VeriView/src/main/webapp/WEB-INF/web.xml
@@ -40,6 +40,12 @@
   	<description></description>
   	<servlet-class>com.saoe.controller.GBReviewCon</servlet-class>
   </servlet>
+  <servlet>
+  	<servlet-name>WriteMessageCon</servlet-name>
+  	<display-name>WriteMessageCon</display-name>
+  	<description></description>
+  	<servlet-class>com.saoe.controller.WriteMessageCon</servlet-class>
+  </servlet>
 
 
   <servlet-mapping>
@@ -65,6 +71,10 @@
   <servlet-mapping>
   	<servlet-name>GBReviewCon</servlet-name>
   	<url-pattern>/GBReviewCon</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>WriteMessageCon</servlet-name>
+  	<url-pattern>/WriteMessageCon</url-pattern>
   </servlet-mapping>
 
 
