--- a/VeriView/src/main/webapp/WEB-INF/web.xml
+++ b/VeriView/src/main/webapp/WEB-INF/web.xml
@@ -3,80 +3,148 @@
  "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
 <web-app>
-  <display-name>Archetype Created Web Application</display-name>
-  <servlet>
-  	<servlet-name>DeleteReviewCon</servlet-name>
-  	<display-name>DeleteReviewCon</display-name>
-  	<description></description>
-  	<servlet-class>com.saoe.controller.DeleteReviewCon</servlet-class>
-  </servlet>
-  <servlet>
-  	<servlet-name>UpdateReviewCon</servlet-name>
-  	<display-name>UpdateReviewCon</display-name>
-  	<description></description>
-  	<servlet-class>com.saoe.controller.UpdateReviewCon</servlet-class>
-  </servlet>
-  <servlet>
-  	<servlet-name>ScrapReviewCon</servlet-name>
-  	<display-name>ScrapReviewCon</display-name>
-  	<description></description>
-  	<servlet-class>com.saoe.controller.ScrapReviewCon</servlet-class>
-  </servlet>
-  <servlet>
-  	<servlet-name>BlockReviewCon</servlet-name>
-  	<display-name>BlockReviewCon</display-name>
-  	<description></description>
-  	<servlet-class>com.saoe.controller.BlockReviewCon</servlet-class>
-  </servlet>
-  <servlet>
-  	<servlet-name>ReportReviewCon</servlet-name>
-  	<display-name>ReportReviewCon</display-name>
-  	<description></description>
-  	<servlet-class>com.saoe.controller.ReportReviewCon</servlet-class>
-  </servlet>
-  <servlet>
-  	<servlet-name>GBReviewCon</servlet-name>
-  	<display-name>GBReviewCon</display-name>
-  	<description></description>
-  	<servlet-class>com.saoe.controller.GBReviewCon</servlet-class>
-  </servlet>
-  <servlet>
-  	<servlet-name>WriteMessageCon</servlet-name>
-  	<display-name>WriteMessageCon</display-name>
-  	<description></description>
-  	<servlet-class>com.saoe.controller.WriteMessageCon</servlet-class>
-  </servlet>
+	<display-name>Archetype Created Web Application</display-name>
+	<servlet>
+		<servlet-name>DeleteReviewCon</servlet-name>
+		<display-name>DeleteReviewCon</display-name>
+		<description></description>
+		<servlet-class>com.saoe.controllers.reviewController.DeleteReviewCon</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>UpdateReviewCon</servlet-name>
+		<display-name>UpdateReviewCon</display-name>
+		<description></description>
+		<servlet-class>com.saoe.controllers.reviewController.UpdateReviewCon</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>ScrapReviewCon</servlet-name>
+		<display-name>ScrapReviewCon</display-name>
+		<description></description>
+		<servlet-class>com.saoe.controllers.reviewController.ScrapReviewCon</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>BlockReviewCon</servlet-name>
+		<display-name>BlockReviewCon</display-name>
+		<description></description>
+		<servlet-class>com.saoe.controllers.reviewController.BlockReviewCon</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>ReportReviewCon</servlet-name>
+		<display-name>ReportReviewCon</display-name>
+		<description></description>
+		<servlet-class>com.saoe.controllers.reviewController.ReportReviewCon</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>GBReviewCon</servlet-name>
+		<display-name>GBReviewCon</display-name>
+		<description></description>
+		<servlet-class>com.saoe.controllers.reviewController.GBReviewCon</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>WriteMessageCon</servlet-name>
+		<display-name>WriteMessageCon</display-name>
+		<description></description>
+		<servlet-class>com.saoe.controllers.messageController.WriteMessageCon</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>UpdateMemberCon</servlet-name>
+		<display-name>UpdateMemberCon</display-name>
+		<description></description>
+		<servlet-class>com.saoe.controllers.memberController.UpdateMemberCon</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>FollowMemberCon</servlet-name>
+		<display-name>FollowMemberCon</display-name>
+		<description></description>
+		<servlet-class>com.saoe.controllers.memberController.FollowMemberCon</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>BlockMemberCon</servlet-name>
+		<display-name>BlockMemberCon</display-name>
+		<description></description>
+		<servlet-class>com.saoe.controllers.memberController.BlockMemberCon</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>ReportMemberCon</servlet-name>
+		<display-name>ReportMemberCon</display-name>
+		<description></description>
+		<servlet-class>com.saoe.controllers.memberController.ReportMemberCon</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>FollowRestCon</servlet-name>
+		<display-name>FollowRestCon</display-name>
+		<description></description>
+		<servlet-class>com.saoe.controllers.restCont.FollowRestCon</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>GBRestCon</servlet-name>
+		<display-name>GBRestCon</display-name>
+		<description></description>
+		<servlet-class>com.saoe.controllers.restCont.GBRestCon</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>BlockRestCon</servlet-name>
+		<display-name>BlockRestCon</display-name>
+		<description></description>
+		<servlet-class>com.saoe.controllers.restCont.BlockRestCon</servlet-class>
+	</servlet>
 
 
-  <servlet-mapping>
-  	<servlet-name>DeleteReviewCon</servlet-name>
-  	<url-pattern>/DeleteReviewCon</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-  	<servlet-name>UpdateReviewCon</servlet-name>
-  	<url-pattern>/UpdateReviewCon</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-  	<servlet-name>ScrapReviewCon</servlet-name>
-  	<url-pattern>/ScrapReviewCon</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-  	<servlet-name>BlockReviewCon</servlet-name>
-  	<url-pattern>/BlockReviewCon</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-  	<servlet-name>ReportReviewCon</servlet-name>
-  	<url-pattern>/ReportReviewCon</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-  	<servlet-name>GBReviewCon</servlet-name>
-  	<url-pattern>/GBReviewCon</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-  	<servlet-name>WriteMessageCon</servlet-name>
-  	<url-pattern>/WriteMessageCon</url-pattern>
-  </servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>DeleteReviewCon</servlet-name>
+		<url-pattern>/DeleteReviewCon</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>UpdateReviewCon</servlet-name>
+		<url-pattern>/UpdateReviewCon</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>ScrapReviewCon</servlet-name>
+		<url-pattern>/ScrapReviewCon</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>BlockReviewCon</servlet-name>
+		<url-pattern>/BlockReviewCon</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>ReportReviewCon</servlet-name>
+		<url-pattern>/ReportReviewCon</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>GBReviewCon</servlet-name>
+		<url-pattern>/GBReviewCon</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>WriteMessageCon</servlet-name>
+		<url-pattern>/WriteMessageCon</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>UpdateMemberCon</servlet-name>
+		<url-pattern>/UpdateMemberCon</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>FollowMemberCon</servlet-name>
+		<url-pattern>/FollowMemberCon</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>BlockMemberCon</servlet-name>
+		<url-pattern>/BlockMemberCon</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>ReportMemberCon</servlet-name>
+		<url-pattern>/ReportMemberCon</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>FollowRestCon</servlet-name>
+		<url-pattern>/FollowRestCon</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>GBRestCon</servlet-name>
+		<url-pattern>/GBRestCon</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>BlockRestCon</servlet-name>
+		<url-pattern>/BlockRestCon</url-pattern>
+	</servlet-mapping>
 
-
- 
 </web-app>
