--- a/VeriView/pom.xml
+++ b/VeriView/pom.xml
@@ -78,6 +78,14 @@
 			<artifactId>cos</artifactId>
 			<version>2020.4</version>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
+		<dependency>
+			<groupId>com.googlecode.json-simple</groupId>
+			<artifactId>json-simple</artifactId>
+			<version>1.1.1</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
