커밋자 - 심우석 관심사 페이지 완료

--- a/VeriView/src/main/webapp/WEB-INF/web.xml
+++ b/VeriView/src/main/webapp/WEB-INF/web.xml
@@ -94,6 +94,12 @@
 		<description></description>
 		<servlet-class>com.saoe.controllers.reviewController.CateFeedCon</servlet-class>
 	</servlet>
+	<servlet>
+		<servlet-name>InsertInter</servlet-name>
+		<display-name>InsertInter</display-name>
+		<description></description>
+		<servlet-class>com.saoe.controllers.memberController.InsertInter</servlet-class>
+	</servlet>
 
 
 	<servlet-mapping>
@@ -155,6 +161,10 @@
 	<servlet-mapping>
 		<servlet-name>CateFeedCon</servlet-name>
 		<url-pattern>/CateFeedCon</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>InsertInter</servlet-name>
+		<url-pattern>/InsertInter</url-pattern>
 	</servlet-mapping>
 
 </web-app>
